--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-background-image": "^0.8.15",
     "gatsby-image": "^2.2.29",
     "gatsby-plugin-manifest": "^2.2.23",
+    "gatsby-plugin-modal-routing": "^1.0.2",
     "gatsby-plugin-offline": "^3.0.16",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.13",
