--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "animate-css-styled-components": "^1.0.2",
     "gatsby": "^2.16.1",
     "gatsby-background-image": "^0.8.15",
     "gatsby-image": "^2.2.29",
